# csvdb

./: .flake8  pyproject.toml
csvdb/: __init__.py  dbapi.py  sqlalchemy.py
tests/: conftest.py  test_dbapi.py  test_sqlalchemy.py
tests/testdb/: data.csv  users.csv
