[tool.poetry]
name = "csvdb"
version = "0.1.0"
description = ""
authors = ["Samantha Tesla <stesla@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = "^25.28.0"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pylint = "^3.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
